--- a/index.html
+++ b/index.html
@@ -4,31 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BoostingERLC</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
       background-color: #121212;
-      color: #ffffff;
+      color: white;
+      overflow: hidden;
+    }
+
+    /* Loading Screen */
+    #loading-screen {
+      position: fixed;
+      z-index: 9999;
+      background-color: #121212;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      transition: opacity 0.6s ease;
+    }
+
+    #loading-logo {
+      width: 64px;
+      height: 64px;
+      animation: spin 1.2s linear infinite;
+      margin-bottom: 12px;
+    }
+
+    #loading-text {
+      font-size: 1.25rem;
+      color: white;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    /* Main Site */
+    #main-content {
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 1s ease;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
+      height: 100vh;
       padding: 2rem;
     }
+
     h1 {
       font-size: 2.5rem;
       color: #b300d7;
     }
+
     p {
       font-size: 1.1rem;
       margin: 1rem 0 2rem;
-      color: #cccccc;
+      color: #ccc;
     }
+
     .button {
       background-color: #b300d7;
       color: white;
@@ -40,9 +88,11 @@
       text-decoration: none;
       transition: background 0.3s ease;
     }
+
     .button:hover {
       background-color: #8a00aa;
     }
+
     footer {
       margin-top: 3rem;
       font-size: 0.9rem;
@@ -51,12 +101,36 @@
   </style>
 </head>
 <body>
-  <h1>BoostingERLC</h1>
-  <p>Fast and affordable boosting in Emergency Response: Liberty County. Trusted and secure.</p>
-  <a class="button" href="https://cash.app/$tillman1324" target="_blank">Buy Now via Cash App</a>
 
-  <footer>
-    &copy; 2025 BoostingERLC. Not affiliated with Roblox or ER:LC.
-  </footer>
+  <!-- Loading Screen -->
+  <div id="loading-screen">
+    <img id="loading-logo" src="https://cdn.discordapp.com/icons/1125044541054013470/fa050921cd27a616a6015deaed91283b.webp" alt="Loading"/>
+    <div id="loading-text">Boostingerlc</div>
+  </div>
+
+  <!-- Main Site Content -->
+  <div id="main-content">
+    <h1>BoostingERLC</h1>
+    <p>Fast and affordable boosting in Emergency Response: Liberty County.</p>
+    <a class="button" href="https://cash.app/$tillman1324" target="_blank">Buy Now via Cash App</a>
+    <footer>&copy; 2025 BoostingERLC. Not affiliated with Roblox or ER:LC.</footer>
+  </div>
+
+  <!-- Script -->
+  <script>
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        const loader = document.getElementById('loading-screen');
+        const main = document.getElementById('main-content');
+        loader.style.opacity = '0';
+        setTimeout(() => {
+          loader.style.display = 'none';
+          main.style.opacity = '1';
+          main.style.pointerEvents = 'all';
+        }, 600);
+      }, 2500);
+    });
+  </script>
+
 </body>
 </html>
