--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
 
   <!-- Script -->
   <script>
-    window.addEventListener('load', () => {
+  window.addEventListener('load', () => {
+    setTimeout(() => {
+      const loader = document.getElementById('loading-screen');
+      const main = document.getElementById('main-content');
+      loader.style.opacity = '0';
       setTimeout(() => {
-        const loader = document.getElementById('loading-screen');
-        const main = document.getElementById('main-content');
-        loader.style.opacity = '0';
-        setTimeout(() => {
-          loader.style.display = 'none';
-          main.style.opacity = '1';
-          main.style.pointerEvents = 'all';
-        }, 600);
-      }, 2500);
-    });
-  </script>
-
+        loader.style.display = 'none';
+        main.style.opacity = '1';
+        main.style.pointerEvents = 'all';
+      }, 600);
+    }, 4000); // Waits 4 seconds before fading out
+  });
+</script>
+  
 </body>
 </html>
