--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div id="main-content">
     <h1>BoostingERLC</h1>
     <p>Fast and affordable boosting in Emergency Response: Liberty County.</p>
-    <a class="button" href="https://cash.app/$tillman1324" target="_blank">Buy Now via Cash App</a>
+    <a class="button" href="https://cash.app/$tillman1324" target="_blank">Start Boosting!</a>
     <footer>&copy; 2025 BoostingERLC. Not affiliated with Roblox or ER:LC.</footer>
   </div>
 
